--- a/assets/lang/zh_CN.ini
+++ b/assets/lang/zh_CN.ini
@@ -373,7 +373,7 @@ ConfirmLoad = 您要载入这个存档吗？
 ConnectingAP = 连接到接入点。\n请稍候…
 ConnectingPleaseWait = 连接中。\n请稍候…
 ConnectionName = 连接名称
-Copy to clipboard = Copy to clipboard
+Copy to clipboard = 复制到剪贴板
 Corrupted Data = 数据损坏
 Delete = 删除
 Delete all = 全部删除
@@ -731,7 +731,7 @@ Map Mouse = 鼠标映射
 Replace = 替换现有
 Show PSP = PSP 布局
 Standard PSP controls = PSP基本按键
-Strict combo input order = 依据顺序出招
+Strict combo input order = 遵循连招顺序
 You can press ESC to cancel. = 按下Esc键退出
 
 [MainMenu]
@@ -744,9 +744,9 @@ Exit = 退出程序
 Game Settings = 游戏设置
 Games = 载入新游戏
 Give PPSSPP permission to access storage = 请授权PPSSPP读写必要的存储空间
-Homebrew & Demos = 自制应用与演示软件
+Homebrew & Demos = 自制应用与试玩
 How to get games = 如何获得游戏？
-How to get homebrew & demos = 如何获得自制应用与演示软件？
+How to get homebrew & demos = 如何获得自制应用与试玩？
 Load = 载入游戏…
 Loading... = 读取中…
 PinPath = 置顶文件夹
